Check for self collision

--- a/train/index.html
+++ b/train/index.html
@@ -4,15 +4,17 @@
         <meta charset="utf-8">
         <meta name="description" content="TrainJam">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>WelcomeToTheTrainJam</title>
+        <title>Snake 2000</title>
         <link rel="stylesheet" href="css/style.css">
-        <script src="js/vendor/easeljs.js"></script>
+        <!-- // <script src="js/vendor/Box2D_v2.3.1_debug.js" type="text/javascript"></script> -->
+        <script src="js/vendor/Box2D_v2.3.1_min.js" type="text/javascript"></script>
+        <script src="js/vendor/easeljs.js" type="text/javascript"></script>
     </head>
     <body id = "game_is_inside">
 
-        <script src="js/Passenger.js"></script>
-        <script src="js/TrainCar.js"></script>
-        <script src="js/Train.js"></script>
-        <script src="js/main.js"></script>
+        <script src="js/Passenger.js" type="text/javascript"></script>
+        <script src="js/TrainCar.js" type="text/javascript"></script>
+        <script src="js/Train.js" type="text/javascript"></script>
+        <script src="js/main.js" type="text/javascript"></script>
     </body>
 </html>
